--- a/style.css
+++ b/style.css
@@ -1,16 +1,55 @@
-textarea{
-    display: block;
-    height: 15vh;
-    width:70%; 
-    margin:1rem 1rem;
-    padding:1rem 2rem;       
-}
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital@1&display=swap');
+
 #output{
 
     border:1px solid black;
     height:15vh;
-    width:80%;
+    width:95%;
     margin:1rem;
     padding:1rem;
 
+}
+
+
+textarea{
+    display: block;
+    height: 20vh;
+    width:87%; 
+    margin:1rem 1rem;
+    padding:1rem 2rem;       
+}
+
+header{
+    height:20vh;
+    width:95%;
+    background-color:#FACC15 ;
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    display:block;
+    text-align: center;
+
+}
+.header-heading{
+    padding-top: 2rem;
+    font-family:'Titillium Web', sans-serif;
+    color:#334155;
+}
+
+#btn-translate{
+    padding:1rem;
+    display: block;
+    margin-left: 15px;
+    border-radius:10px 10px 10px 10px;
+     margin-top: 10px;
+     margin-bottom: 10px;
+     background-color:#BFDBFE;
+    font-family: 'Titillium Web', sans-serif;
+    
+}
+
+.above-output-heading{
+    margin:20px;
+    font-weight: bolder;
+    color:#334155;
+    
 }
