--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header{
     border-radius:10px 10px 10px 10px;
      margin-top: 10px;
      margin-bottom: 10px;
-     background-color:#BFDBFE;
+     background-color:#E7E5E4;
     font-family: 'Titillium Web', sans-serif;
     
 }
